# binance-journal

./: pyproject.toml
binanceapp/: __main__.py
