[tool.poetry]
name = "binance-journal"
version = "0.1.0"
description = "Maintain your crypto portfolio"
authors = ["Rohan Singh <rohansingh@ygivenx.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
gcloud = "^0.18.3"

[tool.poetry.dev-dependencies]
pytest = "*"
flake8 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
